--- a/media/css/colors/default.css
+++ b/media/css/colors/default.css
@@ -189,8 +189,8 @@
 }
 
 .search-box .nav-tabs > li > a {
-    color: rgb(229, 38, 38);
-    background-color: rgb(215, 215, 215);
+    color: white;
+    background-color: rgb(144, 144, 144);
     cursor: default;
     border: none;
     border-radius: 4px 4px 0 0;	
@@ -218,7 +218,7 @@
 .search-box-modal .nav-tabs > li > a:hover {
     color: #fff;
     cursor: default;
-    background-color: rgba(229, 38, 38, 0.5);
+    background-color: rgb(98, 98, 98);
     border: none;
 }
 
