--- a/media/css/colors/default.css
+++ b/media/css/colors/default.css
@@ -184,23 +184,23 @@
     border: none;
 }
 
+.search-box .nav-tabs > li > a,
 .search-box.result-list-page .nav-tabs > li > a {
-	background-color: rgb(245, 245, 245);
-}
-
-.search-box .nav-tabs > li > a {
-    color: rgb(229, 38, 38);
-    background-color: rgb(215, 215, 215);
+    color: #fff;
+    background-color: rgb(155, 155, 155);
     cursor: default;
     border: none;
     border-radius: 4px 4px 0 0;	
 }
 
 .search-box .nav-tabs > li.active > a,
+.search-box.result-list-page .nav-tabs > li.active > a,
 .search-box-modal .nav-tabs > li.active > a,
 .search-box .nav-tabs > li.active > a:focus,
+.search-box.result-list-page .nav-tabs > li.active > a:focus,
 .search-box-modal .nav-tabs > li.active > a:focus,
 .search-box .nav-tabs > li.active > a:hover,
+.search-box.result-list-page .nav-tabs > li.active > a:hover,
 .search-box-modal .nav-tabs > li.active > a:hover {
     color: #fff;
     cursor: default;
@@ -215,6 +215,10 @@
 }
 
 .search-box .nav-tabs > li > a:hover,
+.search-box.result-list-page .nav-tabs > li > a:hover {
+	background-color: rgba(155, 155, 155, 0.5);
+}
+
 .search-box-modal .nav-tabs > li > a:hover {
     color: #fff;
     cursor: default;
