--- a/backoffice/media/css/custom.css
+++ b/backoffice/media/css/custom.css
@@ -1,3 +1,7 @@
+.modal-footer .btn + .btn {
+	margin-bottom: 0px !important;
+}
+
 .nav-sm .container.body .col-md-3.left_col {
   width: 70px;
   padding: 0;
