--- a/media/css/colors/default.css
+++ b/media/css/colors/default.css
@@ -1280,7 +1280,12 @@ a.form-control:hover {
 
 .search-box-modal .nav-tabs {
 	border-bottom: none;
+	
 	padding-top: 0px;
+}
+
+.search-box .tab-pane {
+	padding: 0;
 }
 
 .search-box-modal .tab-pane {
