--- a/media/css/colors/default.css
+++ b/media/css/colors/default.css
@@ -1284,10 +1284,7 @@ a.form-control:hover {
 	padding-top: 0px;
 }
 
-.search-box .tab-pane {
-	padding: 0;
-}
-
+.search-box .tab-pane, 
 .search-box-modal .tab-pane {
 	padding: 0;
 }
